--- a/image-search-clip (1).ipynb
+++ b/image-search-clip (1).ipynb
@@ -211,7 +211,14 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "import pinecone\n",
+    "\n",
+    "pinecone.init(api_key = \"3f502bca-9e91-41e3-9a4a-81b2570dc419\", environment=\"gcp-starter\")\n",
+    "\n",
+    "#pinecone.create_index(\"vectors\", dimension=512, metric=\"euclidean\")\n",
+    "pinecone.describe_index(\"vectors\")"
+   ]
   },
   {
    "cell_type": "code",
