Pinecone index created

--- a/image-search-clip (1).ipynb
+++ b/image-search-clip (1).ipynb
@@ -222,14 +222,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9d2ee57b-736d-4466-b775-2e83a8d59299",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "id": "9825c516-c0fb-4283-9507-541f0c05fdd4",
    "metadata": {},
@@ -6533,7 +6525,7 @@
     "#\n",
     "# Path where the feature vectors will be stored\n",
     "#\n",
-    "\n",
+    "index = pinecone.Index(\"vectors\")\n",
     "\n",
     "features_path = Path(\".\") / \"features\"\n",
     "if os.path.exists(features_path):\n",
