Search Quiries added

--- a/image-search-clip (1).ipynb
+++ b/image-search-clip (1).ipynb
@@ -6710,7 +6710,13 @@
     "#\n",
     "# Search for images and visualize the results\n",
     "#\n",
-    "\n",
+    "search_queries = ['Blue Tshirt', \n",
+    "                  'Dark Blue Tshirt', \n",
+    "                  'Pink Clothes', \n",
+    "                  'Shorts',\n",
+    "                  'Pants'\n",
+    "                ]\n",
+    "n_results_per_query = 3\n",
     " \n",
     "fig, ax = plt.subplots(len(search_queries), n_results_per_query + 1, figsize=(15, 10))    \n",
     "for i, search_query in enumerate(search_queries):\n",
